--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,190 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/login_background"
-    tools:context=".LoginActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@drawable/login_background"
+        android:orientation="vertical"
+        tools:context=".LoginActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="40dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hello There!"
-                android:textSize="22sp"
-                android:layout_marginLeft="15dp"
-                android:fontFamily="@font/poppins_bold"
-                android:textColor="@color/white"/>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:orientation="horizontal">
-
-                <RadioGroup
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="5dp"
-                    android:id="@+id/radioGroup">
-
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Event Manager"
-                        android:id="@+id/radioButton"
-                        android:checked="true"
-                        android:textSize="17sp"
-                        android:fontFamily="@font/poppins_medium"
-                        android:buttonTint="@color/white"
-                        android:textColor="@color/white"/>
-
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="User"
-                        android:fontFamily="@font/poppins_medium"
-                        android:checked="false"
-                        android:buttonTint="@color/white"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="@color/white"
-                        android:textSize="17sp"
-                        android:id="@+id/radioButton2" />
-
-                </RadioGroup>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="25dp"
-                    android:padding="5dp"
-                    android:background="@drawable/edit_text_round_bg_white"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="48px"
-                        android:layout_height="48px"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="5dp"
-                        android:background="@drawable/email"/>
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="Email"
-                        android:inputType="textEmailAddress"
-                        android:layout_marginLeft="5dp"
-                        android:fontFamily="@font/poppins_light"
-                        android:background="@drawable/edit_text_round_bg_white"
-                        android:textColor="@color/black_5"
-                        android:id="@+id/username"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="25dp"
-                    android:padding="5dp"
-                    android:background="@drawable/edit_text_round_bg_white"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="48px"
-                        android:layout_height="48px"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="5dp"
-                        android:background="@drawable/privacy"/>
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="Password"
-                        android:layout_marginLeft="5dp"
-                        android:fontFamily="@font/poppins_light"
-                        android:inputType="textPassword"
-                        android:background="@drawable/edit_text_round_bg_white"
-                        android:textColor="@color/black_5"
-                        android:id="@+id/password"/>
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="150dp"
-                        android:layout_height="48dp"
-                        android:text="Login"
-                        android:textAlignment="center"
-                        android:padding="8dp"
-                        android:textSize="20sp"
-                        android:id="@+id/text_login"
-                        android:fontFamily="@font/poppins_bold"
-                        android:textColor="@color/white"
-                        android:background="@drawable/login_button"
-                        android:gravity="center_horizontal" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Forget Password?"
-                        android:textAlignment="textEnd"
-                        android:padding="8dp"
-                        android:textSize="15sp"
-                        android:fontFamily="@font/poppins_medium"
-                        android:textColor="@color/white"
-                        android:gravity="end"
-                        android:id="@+id/forget_pass"
-                        tools:ignore="RtlCompat" />
-
-                </LinearLayout>
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="10dp"
+                android:orientation="vertical"
+                android:padding="15dp">
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="Hello There!"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Register Account"
-                    android:textAlignment="center"
-                    android:padding="8dp"
-                    android:layout_marginTop="10dp"
-                    android:textSize="15sp"
-                    android:id="@+id/text_register"
-                    android:fontFamily="@font/poppins_medium"
-                    android:textColor="@color/white"
-                    android:gravity="center" />
+                    android:layout_marginTop="15dp"
+                    android:orientation="horizontal">
+
+                    <RadioGroup
+                        android:id="@+id/radioGroup"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:padding="5dp">
+
+                        <RadioButton
+                            android:id="@+id/radioButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:buttonTint="@color/white"
+                            android:checked="true"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text="Event Manager"
+                            android:textColor="@color/white"
+                            android:textSize="17sp" />
+
+                        <RadioButton
+                            android:id="@+id/radioButton2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:buttonTint="@color/white"
+                            android:checked="false"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text="User"
+                            android:textColor="@color/white"
+                            android:textSize="17sp" />
+
+                    </RadioGroup>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="25dp"
+                        android:background="@drawable/edit_text_round_bg_white"
+                        android:orientation="horizontal"
+                        android:padding="5dp">
+
+                        <ImageView
+                            android:layout_width="48px"
+                            android:layout_height="48px"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="5dp"
+                            android:background="@drawable/email" />
+
+                        <EditText
+                            android:id="@+id/username"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="5dp"
+                            android:background="@drawable/edit_text_round_bg_white"
+                            android:fontFamily="@font/poppins_light"
+                            android:hint="Email"
+                            android:inputType="textEmailAddress"
+                            android:textColor="@color/black_5" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="25dp"
+                        android:background="@drawable/edit_text_round_bg_white"
+                        android:orientation="horizontal"
+                        android:padding="5dp">
+
+                        <ImageView
+                            android:layout_width="48px"
+                            android:layout_height="48px"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="5dp"
+                            android:background="@drawable/privacy" />
+
+                        <EditText
+                            android:id="@+id/password"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="5dp"
+                            android:background="@drawable/edit_text_round_bg_white"
+                            android:fontFamily="@font/poppins_light"
+                            android:hint="Password"
+                            android:inputType="textPassword"
+                            android:textColor="@color/black_5" />
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/text_login"
+                            android:layout_width="150dp"
+                            android:layout_height="48dp"
+                            android:background="@drawable/login_button"
+                            android:fontFamily="@font/poppins_bold"
+                            android:gravity="center_horizontal"
+                            android:padding="8dp"
+                            android:text="Login"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/forget_pass"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:gravity="end"
+                            android:padding="8dp"
+                            android:text="Forget Password?"
+                            android:textAlignment="textEnd"
+                            android:textColor="@color/white"
+                            android:textSize="15sp"
+                            tools:ignore="RtlCompat" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/text_register"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/poppins_medium"
+                        android:gravity="center"
+                        android:padding="8dp"
+                        android:text="Register Account"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="15sp" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+</layout>
