--- a/app/src/main/res/layout-land/activity_live_stream.xml
+++ b/app/src/main/res/layout-land/activity_live_stream.xml
@@ -1,105 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".user.liveStream.LiveStreamActivity"
-    android:keepScreenOn="true">
-    <FrameLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:id="@+id/selfFL"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:keepScreenOn="true"
+        tools:context=".user.liveStream.LiveStreamActivity">
 
-    <LinearLayout
-        android:id="@+id/llLiveStreamRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_margin="@dimen/_12sdp"
-        android:orientation="horizontal">
+        <FrameLayout
+            android:id="@+id/selfFL"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvLiveStreamCountDown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:background="@drawable/back_follow"
-            android:backgroundTint="@color/colorOptionText"
-            android:includeFontPadding="false"
-            android:paddingStart="@dimen/_10sdp"
-            android:paddingTop="@dimen/_3sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:paddingBottom="@dimen/_3sdp"
-            android:text="@string/live"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_10ssp"
-            android:visibility="gone"
-            app:fontFamily="@font/poppins_medium"
-            tools:ignore="RtlCompat" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvStreamLive"
+        <LinearLayout
+            android:id="@+id/llLiveStreamRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:background="@drawable/back_follow"
-            android:backgroundTint="@color/colorOptionText"
-            android:includeFontPadding="false"
-            android:paddingStart="@dimen/_10sdp"
-            android:paddingTop="@dimen/_3sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:paddingBottom="@dimen/_3sdp"
-            android:text="@string/live"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_10ssp"
-            android:visibility="visible"
-            app:fontFamily="@font/poppins_medium"
-            tools:ignore="RtlCompat" />
-    </LinearLayout>
+            android:layout_margin="@dimen/_12sdp"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/llLiveStreamLeft"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="start"
-        android:orientation="vertical"
-        android:visibility="visible">
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvLiveStreamCountDown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:background="@drawable/back_follow"
+                android:backgroundTint="@color/colorOptionText"
+                android:includeFontPadding="false"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingTop="@dimen/_3sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_3sdp"
+                android:text="@string/live"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_10ssp"
+                android:visibility="gone"
+                app:fontFamily="@font/poppins_medium"
+                tools:ignore="RtlCompat" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvLiveStreamUserCount"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvStreamLive"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:background="@drawable/back_follow"
+                android:backgroundTint="@color/colorOptionText"
+                android:includeFontPadding="false"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingTop="@dimen/_3sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_3sdp"
+                android:text="@string/live"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_10ssp"
+                android:visibility="visible"
+                app:fontFamily="@font/poppins_medium"
+                tools:ignore="RtlCompat" />
+        </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgSwitchCamera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:layout_margin="@dimen/_12sdp"
             android:background="@drawable/back_follow"
-            android:backgroundTint="@color/colorBlack66"
-            android:drawableStart="@drawable/ic_user"
-            android:drawablePadding="@dimen/_5sdp"
-            android:gravity="center_vertical"
-            android:includeFontPadding="false"
-            android:paddingStart="@dimen/_10sdp"
-            android:paddingTop="@dimen/_3sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:paddingBottom="@dimen/_3sdp"
-            android:text="0"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_12ssp"
-            android:visibility="visible"
-            app:fontFamily="@font/poppins_medium"
-            tools:ignore="RtlCompat" />
+            android:padding="@dimen/_10sdp"
+            android:visibility="gone"
+            app:srcCompat="@drawable/ic_camera_switch"
+            app:tint="@color/white" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerLiveUser"
+        <LinearLayout
+            android:id="@+id/llLiveStreamLeft"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            android:overScrollMode="never"
-            android:paddingStart="@dimen/_12sdp"
-            android:paddingEnd="@dimen/_7sdp" />
-    </LinearLayout>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+            android:gravity="start"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvLiveStreamUserCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_12sdp"
+                android:background="@drawable/back_follow"
+                android:backgroundTint="@color/colorBlack66"
+                android:drawableStart="@drawable/ic_user"
+                android:drawablePadding="@dimen/_5sdp"
+                android:gravity="center_vertical"
+                android:includeFontPadding="false"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingTop="@dimen/_3sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_3sdp"
+                android:text="0"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_12ssp"
+                android:visibility="visible"
+                app:fontFamily="@font/poppins_medium"
+                tools:ignore="RtlCompat" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerLiveUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:overScrollMode="never"
+                android:paddingStart="@dimen/_12sdp"
+                android:paddingEnd="@dimen/_7sdp" />
+        </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
