--- a/app/src/main/res/layout/activity_live_stream.xml
+++ b/app/src/main/res/layout/activity_live_stream.xml
@@ -62,6 +62,17 @@
             tools:ignore="RtlCompat" />
     </LinearLayout>
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imgSwitchCamera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/_10sdp"
+        app:srcCompat="@drawable/ic_camera_switch"
+        android:layout_gravity="end"
+        android:background="@drawable/back_follow"
+        app:tint="@color/white"
+        android:layout_margin="@dimen/_12sdp"
+        android:visibility="gone"/>
     <LinearLayout
         android:id="@+id/llLiveStreamLeft"
         android:layout_width="match_parent"
