--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -118,6 +118,54 @@
                     android:gravity="center_horizontal"
                     app:ci_drawable="@drawable/ic_indicator_select"
                     app:ci_drawable_unselected="@drawable/ic_indicator_unselect" />
+
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvHomeClubTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_18sdp"
+                    android:includeFontPadding="false"
+                    android:text="@string/club"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_28ssp"
+                    android:layout_marginTop="@dimen/_14sdp"
+                    app:fontFamily="@font/roboto_medium" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerHomeClub"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="false"
+                    android:overScrollMode="never"
+                    android:paddingStart="@dimen/_18sdp"
+                    android:paddingEnd="@dimen/_13sdp" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvHomeDJTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_18sdp"
+                    android:includeFontPadding="false"
+                    android:text="@string/dj"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:textSize="@dimen/_28ssp"
+                    app:fontFamily="@font/roboto_medium" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerHomeDJ"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="false"
+                    android:overScrollMode="never"
+                    android:paddingStart="@dimen/_18sdp"
+                    android:paddingEnd="@dimen/_13sdp" />
+
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
