--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -205,17 +205,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/_18sdp">
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imgAppLogo"
+                android:layout_width="@dimen/_90sdp"
+                android:layout_height="@dimen/_35sdp"
+                app:srcCompat="@drawable/wiredshack"
+                />
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgAccountProfile"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="@dimen/_18sdp"
-                android:layout_marginEnd="@dimen/_18sdp"
-                android:layout_marginBottom="@dimen/_18sdp"
                 android:src="@drawable/place_holder" />
+            </RelativeLayout>
         </RelativeLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
